MacViews/a11y: Ignore invisible accessibility elements.

BubbleFrameView can optionally show a close button based on the return value of
WidgetDelegate::ShouldShowCloseButton() and overrides. In cases when it is set
to false, the close button still appears in the accessibility tree on Mac.

Fix this by ignoring invisible accessibility elements for macOS only. This fix
is not cross-platform because the ui::AX_STATE_INVISIBLE flag seems to be useful
for Windows and Android accessibility.

BUG=660230

Review-Url: https://codereview.chromium.org/2563423006
Cr-Commit-Position: refs/heads/master@{#438342}

Former-commit-id: 506491c05a0dd41bc68604c9b34fe56d93705017